Before Add Guard

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+@font-face {
+    font-family: Persian;
+    src: url('/fonts/persian.woff2');
+}
+html, body { height: 100%; }
+body { margin: 0; font-family: Persian }
+
+*{
+    font-family: Persian;
+}.error{
+    background-color: lightpink;
+    padding: 0.6em;
+    color: black;
+    border-radius: 0.2em;
+    margin-top: 0.5em;
+    width: 100%;
+
+}
+  
