before upgrade to scss

--- a/src/app/+pages/admins/admins.component.html
+++ b/src/app/+pages/admins/admins.component.html
@@ -24,7 +24,7 @@
       }
       <span>کتابخانه دانشگاه صنعتی همدان</span>
     </mat-toolbar>
-    <div>
+    <div class="content">
       <router-outlet></router-outlet>
     </div>
   </mat-sidenav-content>
