--- a/src/app/+pages/auth/ui/auth.component.html
+++ b/src/app/+pages/auth/ui/auth.component.html
@@ -1,4 +1,5 @@
 <div class="login">
+    <div class="head">کتابخانه دانشگاه صنعتی همدان</div>
     <form (ngSubmit)="check()">
       <div class="example-container">
         <div>
