--- a/src/app/+pages/books/ui/books.component.html
+++ b/src/app/+pages/books/ui/books.component.html
@@ -1,7 +1,15 @@
-@if (busy) {
-    <mat-progress-bar mode="indeterminate"></mat-progress-bar>
-    <div>لطفا کمی صبر کنید</div>
+@if (action=='list'){
+    @if (busy) {
+        <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+        
+    }
+    <div  class="actions">
+        <button (click)="add()" mat-flat-button >افزودن</button>
+    </div>
+    @if (data) {
+        <app-grid (select)="select.emit($event)" [selectable]="selectable" (refresh)="reload($event)" (onEdit)="edit($event)"  [data]="data" [columns]="columns"></app-grid>
+    }   
 }
-@if (data) {
-    <app-grid [data]="data" [columns]="columns"></app-grid>
+@else {
+    <app-book-details [id]="current.id" [action]="action" (onCancel)="cancel()"></app-book-details>
 }
