--- a/src/app/+pages/members/ui/members.component.html
+++ b/src/app/+pages/members/ui/members.component.html
@@ -1,7 +1,16 @@
-@if (busy) {
-    <mat-progress-bar mode="indeterminate"></mat-progress-bar>
-    <div>لطفا کمی صبر کنید</div>
+@if (action=='list'){
+    @if (busy) {
+        <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+
+    }
+    <div class="actions">
+        <button (click)="add()" mat-flat-button >افزودن</button>
+    </div>
+    @if (data) {
+    <app-grid (select)="select.emit($event)" [selectable]="selectable" [data]="data" [columns]="columns"></app-grid>
+    }
 }
-@if (data) {
-<app-grid [data]="data" [columns]="columns"></app-grid>
+@else {
+    <app-member-details (onCancel)="cancel()"></app-member-details>
 }
+
