--- a/src/app/+pages/members/ui/members.component.html
+++ b/src/app/+pages/members/ui/members.component.html
@@ -1,16 +1,16 @@
 @if (action=='list'){
     @if (busy) {
         <mat-progress-bar mode="indeterminate"></mat-progress-bar>
-
+        
     }
-    <div class="actions">
+    <div  class="actions">
         <button (click)="add()" mat-flat-button >افزودن</button>
     </div>
     @if (data) {
-    <app-grid (select)="select.emit($event)" [selectable]="selectable" [data]="data" [columns]="columns"></app-grid>
+        <app-grid (select)="select.emit($event)" [selectable]="selectable" (refresh)="reload($event)" (onEdit)="edit($event)"  [data]="data" [columns]="columns"></app-grid>
     }
 }
 @else {
-    <app-member-details (onCancel)="cancel()"></app-member-details>
+    <app-member-details [id]="current.id" [action]="action" (onCancel)="cancel()"></app-member-details>
 }
 
