--- a/src/app/+shared/+components/grid/ui/grid.component.html
+++ b/src/app/+shared/+components/grid/ui/grid.component.html
@@ -36,7 +36,7 @@
             }
             <td>
                 <button type="button" (click)="onEdit.emit(row)" mat-raised-button>{{editTitle}}</button>
-                <button type="button"  mat-raised-button>حذف</button>
+                <button type="button" [id]="current.id"  mat-raised-button>حذف</button>
             </td>
         </tr>
     }
