before add librarian

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,5 +38,12 @@ html {
     margin-bottom: 10px;
     margin-top: 5px;
 }
-
+// mat-sidenav-container {
+//     @include mat.menu-overrides((
+//       item-label-text-color: orange,
+//       item-icon-color: red,
+//       container-color: blue,
+//       color: white
+//     ));
+//   }
 
