after add librarian

--- a/src/app/+pages/admins/admins.component.html
+++ b/src/app/+pages/admins/admins.component.html
@@ -8,6 +8,7 @@
       <a class="r" mat-list-item routerLink="books">کتابها</a>
       <a mat-list-item routerLink="members">اعضا</a>
       <a mat-list-item routerLink="borrows">امانات</a>
+      <a mat-list-item routerLink="librarians">کتابداران</a>
       <a mat-list-item routerLink="dashboard">خانه</a>
       <a mat-list-item (click)="signout()">خروج</a>
     </mat-nav-list>
