--- a/src/app/+shared/+components/grid/ui/grid.component.html
+++ b/src/app/+shared/+components/grid/ui/grid.component.html
@@ -41,7 +41,7 @@
         </tr>
     }
 </table>
-<div>
+<div class="button">
     <button [disabled]="page==0" (click)="prev()" mat-flat-button>قبلی</button>
     <button [disabled]="(data?.length??0)<size" (click)="next()" mat-flat-button>بعدی</button>
     <mat-form-field>
