--- a/src/app/+pages/auth2/ui/auth2.component.css
+++ b/src/app/+pages/auth2/ui/auth2.component.css
@@ -1,7 +1,7 @@
 :host{
     display: flex;
     height: 100vh;
-    background-color: silver;
+    background-color: rgba(192, 192, 192, 0);
     align-items: center;
     justify-content: center;
 }
@@ -24,3 +24,22 @@
     margin: 10px;
     text-align: center;  
 }
+.imgback{
+    width: 100%;
+    height: 100%;
+    opacity: 1;
+    overflow: hidden;
+    margin: 0;
+    position: absolute;
+    z-index: -1;
+    top: 1px;
+    left: 0px;
+    opacity: 0.5;
+  }
+  .imgback img{
+    width: 100%;
+    height: 100%;
+  }
+  .mat-mdc-form-field{
+    width: 100% !important;
+  }
