--- a/src/app/+pages/auth2/ui/auth2.component.html
+++ b/src/app/+pages/auth2/ui/auth2.component.html
@@ -1,5 +1,5 @@
 <div class="login">
-    <div class="head">کتابخانه دانشگاه صنعتی همدان</div>
+  <div class="imgback"><img src="assets\bd525cab6ea529063e0d658e1638cfa9.jpg" alt=""></div>
     <form (ngSubmit)="check()">
       <div class="example-container">
         <div>
