--- a/src/app/+shared/+components/grid/ui/grid.component.css
+++ b/src/app/+shared/+components/grid/ui/grid.component.css
@@ -19,27 +19,27 @@ table {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: center;
-    background-color: #1e4b8f;
+    background-color: #005cbb;
     color: white;
   }
   .button{
     display: flex !important;
-    justify-content: center !important;
-    margin-top: 20px;
-    margin-bottom: 0;
-    margin: auto;
-    background-color: #ffffff;
+    background-color: #e9e8e8;
     position: sticky;
-    bottom: 0;
-    margin-top: 40px;
+    margin-top: 0px;
   }
   .button button{
     width: 10% !important;
     height: 50px;
-    margin: 10px;
+    margin-top: 10px;
+  }
+  .button mat-form-field{
+    margin-top: 10px;
+    width: 10%;
   }
 
   td button{
-    background-color: #245eb5 !important;
+    background-color: #005cbb !important;
     color: white !important;
   }
+ 
